--- a/index.html
+++ b/index.html
@@ -5,31 +5,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Presentasi Nanoteknologi</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 0; padding: 0; text-align: center; background-color: #f4f4f4; }
-        .slide { display: none; padding: 20px; background: white; margin: 20px auto; max-width: 80%; box-shadow: 0 0 10px rgba(0,0,0,0.2); border-radius: 10px; }
-        .active { display: block; }
-        h1, h2 { color: #333; }
-        p { color: #555; text-align: justify; }
-        .nav-btn { margin: 10px; padding: 10px 20px; font-size: 16px; cursor: pointer; background: #007BFF; color: white; border: none; border-radius: 5px; }
-        .nav-btn:hover { background: #0056b3; }
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+            background-color: #f4f4f4;
+        }
+        .slide {
+            display: none;
+            padding: 20px;
+            background: white;
+            margin: 20px auto;
+            max-width: 80%;
+            box-shadow: 0 0 10px rgba(0,0,0,0.2);
+            border-radius: 10px;
+            opacity: 0;
+            transform: translateY(20px);
+            transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+        }
+        .active {
+            display: block;
+            opacity: 1;
+            transform: translateY(0);
+        }
+        h1, h2 {
+            color: #333;
+        }
+        p {
+            color: #555;
+            text-align: justify;
+        }
+        .nav-btn {
+            margin: 10px;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            background: #007BFF;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            transition: background 0.3s, transform 0.2s;
+        }
+        .nav-btn:hover {
+            background: #0056b3;
+            transform: scale(1.05);
+        }
     </style>
 </head>
 <body>
 
 <div id="slides">
-<div class="slide active"><p>NANOTEKNOLOGI DANNANOSTRUKTUR</p><p>Disusun oleh: AHSAN SYAF (22240003)
-M RIYAN RIZKI R (22240012) M IBNU MUNDZIR (22240011)
-
-PROGRAM STUDI TEKNOLOGI AGROINDUSTRI FAKULTAS TEKNIK DAN ILMU KOMPUTER UNIVERSITAS NAHDLATUL ULAMA INDONESIA</p></div><div class="slide "><p>Latar Belakang</p><p>Apa itu Nanoteknologi dan Nano struktur?
-
-Nanoteknologi adalah bidang ilmu yang mempelajari manipulasi materi pada skala nanometer, yaitu satu per miliar meter, untuk menciptakan struktur, perangkat, dan sistem dengan fungsi baru atau yang ditingkatkan. Nanostruktur yaitu, sebagai komponen utama dalam nanoteknologi, merujuk pada struktur dengan ukuran nanometer yang memiliki sifat fisik, kimia, dan biologis unik dibandingkan dengan material dalam skala makro.
-Perkembangan nanoteknologi dan nanostruktur telah membuka peluang baru dalam berbagai bidang, termasuk elektronik, biomedis, energi, dan lingkungan. Salah satu aplikasi nanoteknologi yang signifikan adalah dalam pengelolaan air bersih.
-Penggunaan membran nanofiltrasi telah terbukti efektif dalam menyaring kontaminan dan menyediakan solusi untuk krisis air bersih. Penelitian oleh Setiawan et al. menunjukkan bahwa membran nanofiltrasi dapat menjadi solusi efektif untuk kebutuhan air bersih domestik.</p></div><div class="slide "><p>Prinsip Dasar Nanoteknologi</p><p>Nanoteknologi didasarkan pada beberapa prinsip utama:
-
-Efek Kuantum: Pada skala nano, sifat material mengalami perubahan signifikan akibat dominasi efek kuantum[Alivisatos, A. P. (1996)].
-Rasio Luas Permukaan terhadap Volume yang Tinggi: Material nano memiliki luas  permukaan  lebih  besar  dibanding  volumenya,  meningkatkan  reaktivitas kimia dan efisiensi katalitik[Pankhurst, Q. A., Connolly. 2003].
-Self-Assembly:  Molekul  atau  partikel  nano  dapat  membentuk  struktur terorganisir berdasarkan interaksi antar atom[Whitesides, G. M. (2005)].</p></div><div class="slide "><p>Teknologi yang Digunakan</p><p>Teknologi yang di gunakan yaitu menggunakan metode top-down melibatkan pemecahan material berukuran besar menjadi ukuran nano dengan teknik seperti litografi dan ball milling. Teknik ini sering digunakan dalam pembuatan perangkat mikroelektronika dan nanokomposit. Di sisi lain, metode bottom-up menggunakan pendekatan sintesis dari atom atau molekul kecil untuk membentuk nanomaterial melalui proses seperti deposisi uap kimia (CVD) dan metode sol-gel. Metode ini sering diterapkan dalam produksi nanopartikel dan nanotube karbon.</p></div><div class="slide "><p>Tantangan	dan Resiko</p><p>Tantangan dan risiko yang menyertainya tidak dapat diabaikan. Beberapa nanomaterial berpotensi menimbulkan dampak negatif terhadap kesehatan manusia dan lingkungan. Oleh karena itu, penelitian lebih lanjut serta regulasi yang ketat sangat diperlukan untuk memastikan keamanan penggunaannya.Dengan terus berkembangnya riset dan inovasi dalam bidang nanoteknologi, diharapkan teknologi ini dapat memberikan solusi yang lebih efektif dan berkelanjutan terhadap berbagai permasalahan global. Dukungan terhadap pengembangan dan penerapan nanoteknologi yang bertanggung jawab akan memastikan bahwa manfaatnya dapat dioptimalkan tanpa mengorbankan kesehatan dan lingkungan.</p></div><div class="slide "><p>Kesimpulan</p><p>Nanoteknologi merupakan salah satu cabang ilmu yang berkembang pesat dan berkontribusi besar dalam berbagai  bidang,  seperti  kesehatan,  energi,  elektronik,  dan  lingkungan.  Teknologi  ini  memungkinkan manipulasi material dalam skala nanometer sehingga menghasilkan sifat yang lebih unggul dibandingkan dengan material konvensional. Dengan berbagai metode sintesis, baik top-down maupun bottom-up, nanoteknologi terus menciptakan inovasi yang bermanfaat bagi kehidupan manusia.
-Dalam  bidang  kesehatan,  nanoteknologi  telah  merevolusi  sistem  penghantaran  obat  dengan memungkinkan terapi yang lebih tepat sasaran dan mengurangi efek samping. Selain itu, penggunaan nanopartikel perak dan emas dalam peralatan medis serta kosmetik semakin meningkatkan efektivitas pengobatan dan kebersihan.Di sektor energi, nanoteknologi telah berperan dalam pengembangan baterai yang lebih efisien dan tahan lama, serta sel surya yang lebih efektif dalam menangkap energi matahari. Teknologi ini juga membantu dalam efisiensi penggunaan bahan bakar dan penciptaan sumber energi yang lebih ramah lingkungan.</p></div><div class="slide "><p>TERIMA KASIH</p></div>
+    <div class="slide active"><p>NANOTEKNOLOGI DAN NANOSTRUKTUR</p></div>
+    <div class="slide"><p>Latar Belakang</p></div>
+    <div class="slide"><p>Prinsip Dasar Nanoteknologi</p></div>
+    <div class="slide"><p>Teknologi yang Digunakan</p></div>
+    <div class="slide"><p>Tantangan dan Resiko</p></div>
+    <div class="slide"><p>Kesimpulan</p></div>
+    <div class="slide"><p>TERIMA KASIH</p></div>
 </div>
 
 <button class="nav-btn" onclick="prevSlide()">Sebelumnya</button>
@@ -42,7 +75,9 @@ Dalam  bidang  kesehatan,  nanoteknologi  telah  merevolusi  sistem  penghantara
     function showSlide(index) {
         slides.forEach((slide, i) => {
             slide.classList.remove("active");
-            if (i === index) slide.classList.add("active");
+            if (i === index) {
+                slide.classList.add("active");
+            }
         });
     }
 
