--- a/index.html
+++ b/index.html
@@ -51,18 +51,51 @@
             background: #0056b3;
             transform: scale(1.05);
         }
+        img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 10px;
+            margin-top: 10px;
+        }
     </style>
 </head>
 <body>
 
 <div id="slides">
-    <div class="slide active"><p>NANOTEKNOLOGI DAN NANOSTRUKTUR</p></div>
-    <div class="slide"><p>Latar Belakang</p></div>
-    <div class="slide"><p>Prinsip Dasar Nanoteknologi</p></div>
-    <div class="slide"><p>Teknologi yang Digunakan</p></div>
-    <div class="slide"><p>Tantangan dan Resiko</p></div>
-    <div class="slide"><p>Kesimpulan</p></div>
-    <div class="slide"><p>TERIMA KASIH</p></div>
+    <div class="slide active">
+        <h1>NANOTEKNOLOGI DAN NANOSTRUKTUR</h1>
+        <p>Disusun oleh: AHSAN SYAF, M RIYAN RIZKI R, M IBNU MUNDZIR</p>
+        <img src="nanotechnology_intro.jpg" alt="Ilustrasi Nanoteknologi">
+    </div>
+    <div class="slide">
+        <h2>Latar Belakang</h2>
+        <p>Nanoteknologi adalah bidang ilmu yang mempelajari manipulasi materi pada skala nanometer...</p>
+        <img src="nano_background.jpg" alt="Konsep Nanoteknologi">
+    </div>
+    <div class="slide">
+        <h2>Prinsip Dasar Nanoteknologi</h2>
+        <p>Efek Kuantum, Rasio Luas Permukaan terhadap Volume yang Tinggi, dan Self-Assembly...</p>
+        <img src="nano_principles.jpg" alt="Prinsip Dasar Nanoteknologi">
+    </div>
+    <div class="slide">
+        <h2>Teknologi yang Digunakan</h2>
+        <p>Metode top-down dan bottom-up dalam sintesis nanomaterial...</p>
+        <img src="nano_technology.jpg" alt="Teknologi dalam Nanoteknologi">
+    </div>
+    <div class="slide">
+        <h2>Tantangan dan Resiko</h2>
+        <p>Beberapa nanomaterial berpotensi menimbulkan dampak negatif terhadap kesehatan dan lingkungan...</p>
+        <img src="nano_risks.jpg" alt="Resiko dalam Nanoteknologi">
+    </div>
+    <div class="slide">
+        <h2>Kesimpulan</h2>
+        <p>Nanoteknologi merupakan bidang ilmu yang berkembang pesat dengan berbagai manfaat...</p>
+        <img src="nano_conclusion.jpg" alt="Kesimpulan tentang Nanoteknologi">
+    </div>
+    <div class="slide">
+        <h1>TERIMA KASIH</h1>
+        <img src="thank_you.jpg" alt="Terima Kasih">
+    </div>
 </div>
 
 <button class="nav-btn" onclick="prevSlide()">Sebelumnya</button>
